<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:background="@drawable/main"
    android:gravity="center"
    android:id="@+id/main_act"
    tools:context=".MainActivity$PlaceholderFragment">

    <EditText
        android:id="@+id/edit_message"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:hint="@string/edit_message" />


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_meter"
        android:onClick="openmapview"
        android:text="@string/button_send" />

    <CheckBox android:id="@+id/checkbox_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_message"

        android:text="@string/street"
        android:onClick="onCheckboxClicked"/>
    <CheckBox android:id="@+id/checkbox_meter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/checkbox_street"

        android:text="@string/meter"
        android:onClick="onCheckboxClicked"/>

</RelativeLayout>
