<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="cse5236.parkingapp.Details"
    tools:ignore="MergeRootFrame" >
    <TextView
        android:id="@+id/zonenameindetails"
        android:text="placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dip"
        android:textAppearance="?android:attr/textAppearanceLarge"/>
    <Button
        android:id="@+id/timerbutton"
        android:layout_width="6dip"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_toRightOf="@id/zonenameindetails"
        android:layout_alignParentRight="true"
        android:onClick="opentimer"
        android:text="@string/timer"/>

    <TextView
        android:id="@+id/zonedescription"
        android:text="placeholder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/zonenameindetails"
        android:padding="5dip"/>

    <Button
        android:id="@+id/getdirections"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:padding="5dip"
        android:layout_below="@id/zonedescription"
        android:onClick="opengmaps"
        android:text="@string/getdirections"/>

    <TextView
        android:id="@+id/currentdetails"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/currentdetails"
        android:layout_below="@id/getdirections"
        android:padding="5dip"
        />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/currentdetailstable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/currentdetails"
        android:padding="2dip">

        <TableRow
            android:id="@+id/textrow"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="5dip">

            <TextView
                android:id="@+id/currentday"
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:text="@string/day"
                android:padding="5dip"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF0000"/>

            <TextView
                android:id="@+id/timeframe"
                android:layout_width="140dip"
                android:layout_height="fill_parent"
                android:text="@string/timeframe"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF0000"/>

            <TextView
                android:id="@+id/pricetoday"
                android:layout_width="80dip"
                android:layout_height="fill_parent"
                android:text="@string/price"
                android:gravity="center"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:textColor="#FF0000"/>

        </TableRow>

    </TableLayout>

    <TextView
        android:id="@+id/alltimes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/alltimes"
        android:layout_below="@id/currentdetailstable"
        android:padding="5dip"
        />

    <TextView
        android:id="@+id/allyearround"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/allyearround"
        android:layout_below="@id/alltimes"
        android:padding="5dip"
        />

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/weekdetailstable"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_below="@id/allyearround"
        android:layout_above="@id/footertable"
        android:padding="2dip">

        <TableRow
            android:id="@+id/weekrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip">

            <ListView
                android:id="@+id/daylist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
            </ListView>




        </TableRow>

    </TableLayout>

    <TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/footertable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:padding="2dip">

        <TableRow
            android:id="@+id/footerrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="5dip"
            android:gravity="center">

            <Button
                android:id="@+id/parkingtype"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dip"
                android:onClick="home"
                android:text="@string/parkingtype"/>

            <Button
                android:id="@+id/backtolist"
                android:layout_width="150dip"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:padding="5dip"
                android:onClick="list"
                android:text="@string/list" />

        </TableRow>

    </TableLayout>
    </RelativeLayout>